# causalab

./: .gitignore  README.md  pyproject.toml  test_compare_models.py  test_debug_nan.py  test_qwen_nan.py  test_simple_qwen_loss.py
causal/: __init__.py  causal_model.py  causal_utils.py  counterfactual_dataset.py
demos/: MCQA_tutorial.ipynb  causal_model_demo.ipynb  scratch.ipynb
demos/MCQA_attention_results/: 2_answer_MCQA_LlamaForCausalLM_InterventionExperiment_answer_answer_position__results.json
demos/MCQA_demo/: 01_MCQA_task.ipynb
demos/onboarding_tutorial/: 01_define_MCQA_task.ipynb  02_trace_residual_stream.ipynb  03_localize_with_patching.ipynb  04_train_ DAS_and_DBM.ipynb  04_train_DAS_and_DBM.ipynb
experiments/: LM_helpers.py  __init__.py  aggregate_experiments.py  attention_head_experiment.py  benchmark_experiment.py  config.py  experiment_utils.py  filter_experiment.py  intervention_experiment.py  pyvene_core.py  residual_stream_experiment.py  visualizations.py
experiments/LM_experiments/: LM_utils.py  __init__.py  attention_head_experiment.py  residual_stream_experiment.py
neural/: LM_units.py  __init__.py  download_models.py  featurizers.py  model_units.py  pipeline.py
tasks/: __init__.py  task.py
tasks/ARC/: ARC.py
tasks/IOI_task/: ioi_task.py
tasks/MCQA/: causal_models.py  counterfactuals.py  mcqa.py  token_positions.py
tests/: conftest.py  test_LM_experiments.py  test_LM_units.py  test_causal_model.py  test_counterfactual_dataset.py  test_experiment_utils.py  test_featurizers.py  test_filter_experiment.py  test_intervention_experiment.py  test_is_original_flag.py  test_model_units.py  test_pipeline.py  test_residual_stream_layer_indexing.py  test_run_interchange_arrow_syntax.py  test_visualizations.py
(+24 files in other folders)
