[project]
name = "causal-abstraction"
version = "0.0.0"
description = "A toolkit for causal analysis of artificial neural networks."
authors = [
    { name = "Atticus Geiger" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "networkx",
    "matplotlib",
    "pandas",
    "numpy",
    "pyvene @ git+https://github.com/stanfordnlp/pyvene.git@main",
    "scikit-learn",
    "ipywidgets",
    "jupyterlab",
    "ipycytoscape",
    "seaborn",
    "transformers",
    "tensorboard",
    "dash",
    "dash-cytoscape",
    "jupyter-dash",
    "claude-agent-sdk>=0.1.4",
    "rich",
    "nnsight>=0.5.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["causal*", "neural*", "experiments*", "tasks*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
